@@ -1,3 +1,7 @@
+Major changes in 3.26.2:
+* Fixed many Flatpak issues (Mathieu Bridon)
+* Updated translations for many languages.
+
 Major changes in 3.26.1:
 * Fix translations not being picked up.
 * Fix type race issue preventing correct initialization.
